--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Modal</title>
-		<link rel="stylesheet" href="./css/main.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet"
-		/>
-	</head>
-	<body>
-		<main>
-			<section class="main_section">
-				<button class="main_section_btn">SHow modal</button>
-				<span class="overlay"></span>
-				<div class="modal_box">
-					<img class="img_box" src="./img/circle-check-regular.svg" alt="">
-     <h2 class="modal_box_title">Completed</h2>
-     <h3 class="modal_box_title_1">You have sucessfully downloaded !</h3>
-     <div class="buttons">
-      <button class="close_btn">Close</button>
-      <button class="open_btn">Open</button>
-     </div>
-				</div>
-			</section>
-		</main>
-		<script src="js/main.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Modal</title>
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <section class="main_section">
+        <button class="main_section_btn">Show modal</button>
+        <span class="overlay"></span>
+        <div class="modal_box">
+          <img class="img_box" src="./img/circle-check-regular.svg" alt="" />
+          <h2 class="modal_box_title">Completed</h2>
+          <h3 class="modal_box_title_1">You have sucessfully downloaded !</h3>
+          <div class="buttons">
+            <button class="close_btn">Close</button>
+            <button class="open_btn">Open</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="js/main.js"></script>
+  </body>
 </html>
